# liberty-reach-messenger

./: .env.example  .env.local.example  .gitignore  ALL_FEATURES.md  ANTI_FRAGILE_DEPLOYMENT.md  APK_BUILD_COMPLETE.md  APK_BUILD_INSTRUCTIONS.md  APK_BUILD_STATUS.md  APK_FIX_INVALID.md  APK_FOR_ALL_DEVICES.md  APK_READY.md  AUTO_TRANSLATION_FEATURES.md  BUILD_FIX.md  BUILD_GUIDE.md  BUILD_STATUS.md  CHAT_FEATURES_COMPLETE.md  CHAT_UI_COMPLETED.md  CLIENT_RUNNING.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_DEPLOY_GUIDE.md  CLOUDFLARE_FREE_DEPLOY.md  CLOUDFLARE_FREE_DEPLOY_COMPLETE.md  CLOUD_CONFIG_COMPLETE.md  CLOUD_CONFIG_GUIDE.md  CMakeLists.txt  CMakeLists_simple.txt  CODEBERG_TOKEN_CHEATSHEET.txt  COMPLETE_FEATURES_LIST.md  COMPLETE_IMPLEMENTATION.md  Cargo.toml  D1_INTEGRATION.md  DEPLOYMENT_COMPLETE.md  DEPLOY_AND_BUILD_COMPLETE.md  DEPLOY_GUIDE.md  DEPLOY_STATUS.md  DEVELOPMENT_STATUS.md  Dockerfile  FAMILY_STATUSES.md  FEATURES.md  FEATURES_IMPLEMENTED.md  (+83 more)
.continue/: config.json  config.json.example
.github/: security_scanner.py
.github/workflows/: SECRETS.md  android_build.yml  build-android.yml  build-release-apk.yml  build.yml  clean_build.yml  codeql.yml  debug-build.yml  deploy-web.yml  deploy-worker.yml  hybrid_build.yml  hybrid_build_ghost.yml  release.yml  security-scan.yml  sovereign_build.yml  super_clean_apk.yml
backend/: Cargo.toml  D1_INTEGRATION.md  D1_SETUP.md  D1_STATUS.md  README.md  WORKER_RS_MONITORING.md  schema.sql  schema_v2.sql  wrangler.toml
backend-js/: TEST_REPORT.md  VAULT_PROTECTION.md  ai_functions_migration.sql  audio_calls_migration.sql  channels_migration.sql  comprehensive_vault_triggers.sql  emoji_reactions_migration.sql  group_chats_migration.sql  immutable_love_triggers.sql  migration_human_identity.sql  p2p_network_migration.sql  package.json  pinned_messages_migration.sql  push_schema.sql  saved_messages_migration.sql  schema-final.sql  schema-ice.sql  schema-migration.sql  schema.sql  stories_schema.sql  test_vault_triggers.sql  web3_migration.sql  worker.js  wrangler.toml
backend/src/: lib.rs  lib.rs.d1_attempt
cli/src/: cli_app.cpp  main.cpp
cloudflare/: .dev.vars.example  .gitignore  CLOUDFLARE_SETUP.md  QUICK_START.md  package-lock.json  package.json  push_worker.js  schema.sql  tsconfig.json  websocket_server.js  worker.js  wrangler-minimal.toml  wrangler-simple.toml  wrangler.push.toml  wrangler.toml
cloudflare-worker/: index.ts  package.json  tsconfig.json  wrangler.toml
cloudflare/migrations/: 0001_init.sql
cloudflare/src/: durable-objects-fixed.ts  durable-objects.ts  worker-simple.ts  worker.ts
core/: CMakeLists.txt
core/crypto/: Cargo.toml
core/crypto/src/: keys.rs  lib.rs  profile.rs  ratchet.rs  session.rs  steganography.rs  utils.rs
core/include/: additional_features.h  ai_aggregator.h  auto_translation.h  family_statuses.h  ipfs_storage.h  liberty_reach_crypto.h  network_client.h  production_features.h  telegram_features.h
core/src/: ai_aggregator.cpp  auto_translation.cpp  family_statuses.cpp  free_translation.cpp  ipfs_storage.cpp  keys.cpp  liberty_reach_crypto.cpp  network_client.cpp  production_features.cpp  profile.cpp  ratchet.cpp  session.cpp  steganography.cpp  utils.cpp
desktop/: client.py
desktop/src/: call_widget.cpp  chat_widget.cpp  main.cpp  main_full.cpp  main_window.cpp
docs/: CODEBERG_TOKEN_SETUP.md  ENCRYPTION_AUDIT.md  FREE_TRANSLATION.md  GITHUB_ACTIONS_SETUP.md  HYBRID_CICD_SETUP.md  LEGAL_PRIVACY_BG.md  MIGRATION_TOOL.md  MOBILE_SUBDIRECTORY_FIX.md  README.md  SECURITY_AUDIT.md  SECURITY_BEST_PRACTICES.md  SECURITY_PARANOID_MODE.md  SECURITY_SUMMARY.md
docs/reports/: COMPLETION_CHECKLIST.md  FINAL_97_PERCENT_REPORT.md  FINAL_AI_REPORT.md  FINAL_AUDIO_CALLS_REPORT.md  FINAL_CHANNELS_REPORT.md  GITHUB_ACTIONS_SETUP.md  INTEGRATION_CHECKLIST.md  SESSION_FINAL_REPORT.md  TASKS_COMPLETED.md
mesh/: CMakeLists.txt
mesh/include/: mesh_network.h
mesh/src/: mesh_network.cpp
mobile/: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PINATA_SETUP.md  PLATFORM_CONFIG.md  QUICK_SETUP.md  README_ENTRY_FLOW.md  SECURITY_TACTICS.md  SETUP_GUIDE.md  gradle.properties  pubspec.yaml
mobile/android/: build.gradle  build.sh  gradle.properties  settings.gradle
mobile/android/app/: build.gradle  proguard-rules.pro
mobile/flutter/: build-apk.sh  pubspec.yaml
mobile/flutter/lib/: main.dart
mobile/lib/: initial_screen.dart  main.dart
mobile/lib/core/: crypto_service.dart
mobile/lib/models/: models.dart
mobile/lib/providers/: profile_provider.dart
mobile/lib/screens/: admin_dashboard_screen.dart  ai_assistant_screen.dart  audio_call_screen.dart  auth_screen.dart  call_screen.dart  channels_list_screen.dart  chat_list_screen.dart  chat_room_screen.dart  chat_screen.dart  create_group_screen.dart  crypto_wallet_screen.dart  error_screen.dart  family_status_settings_screen.dart  groups_list_screen.dart  hidden_sovereign_portal_screen.dart  import_data_screen.dart  master_password_screen.dart  p2p_peers_screen.dart  saved_messages_screen.dart  secret_admin_login_screen.dart  settings_screen.dart  settings_screen_ghost.dart  splash_screen.dart  (+8 more)
mobile/linux/: CMakeLists.txt
rust_p2p/: Cargo.toml
rust_p2p/src/: lib.rs
rust_p2p_bridge/: pubspec.yaml
scripts/: README_MIGRATION.md  fix_network_and_install.sh  flutter_pub_get_retry.sh  security_audit.sh  setup_android_build.sh  telegram_import.py  whatsapp_import.py
server/: server.py
src/: admin_handlers.rs  ai.rs  ai_engine.rs  ai_guard.rs  calls.rs  chat_types.rs  config.rs  discovery.rs  files.rs  geo.rs  hybrid_moderation.rs  identity.rs  main.rs  media_handlers.rs  network.rs  profiles.rs  social.rs  storage.rs  storage_manager.rs  stories.rs  subtitles.rs  translator.rs  voice.rs  wallet.rs
tests/: crypto_tests.cpp  mesh_tests.cpp  voip_tests.cpp
wallet/include/: crypto_wallet.h
wallet/src/: crypto_wallet.cpp
web/: app.html  index.html  multilingual-chat.html  realtime-chat.html
webrtc/: CMakeLists.txt
webrtc/include/: voip_manager.h
webrtc/src/: voip_manager.cpp
(+80 files in other folders)
