[package]
name = "liberty-sovereign"
version = "0.7.1"
edition = "2021"
description = "Liberty Sovereign - Functional Core with Hybrid AI + P2P"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# libp2p stack
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "kad",
    "tokio",
] }

# HTTP client for AI
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"

# Tracing (verbose logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Utilities
futures = "0.3"
