[package]
name = "liberty-sovereign"
version = "0.7.2"
edition = "2021"
description = "Liberty Sovereign - P2P Messenger with Hybrid AI"

[dependencies]
# Async runtime (REQUIRED for libp2p tokio)
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "io-util"] }

# libp2p stack (tokio-compatible)
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "kad",
    "macros",
] }

# Separate identity crate (fixes type mismatch)
libp2p-identity = "0.2"

# HTTP client for AI
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"

# Tracing (verbose logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Utilities
futures = "0.3"
