[package]
name = "a-love-story"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker backend for Liberty Reach Messenger"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers
worker = "0.2"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"

# Random - CRITICAL for WASM
getrandom = { version = "0.2", features = ["js"] }

# Debugging
console_error_panic_hook = "0.1"
