[package]
name = "liberty_p2p"
version = "0.1.0"
edition = "2021"
description = "Liberty Reach P2P Core - Rust libp2p with E2EE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# libp2p stack (tokio-compatible)
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "kad",
    "macros",
    "quic",
    "identity",
] }

# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }

# FFI for Flutter
flutter_rust_bridge = "2.0"

# Cryptography (E2EE)
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Base64 for key exchange
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
