[package]
name = "liberty_p2p"
version = "0.1.0"
edition = "2021"
description = "Liberty Reach P2P Core - Global libp2p with Kademlia DHT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# libp2p with full feature set
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "quic",
    "dns",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "gossipsub",
    "relay",
    "dcutr",
    "identify",
    "macros",
] }

# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }

# FFI for Flutter
flutter_rust_bridge = "1.80"

# Cryptography
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
