[package]
name = "liberty_p2p"
version = "0.24.0"
edition = "2021"
description = "Liberty Reach P2P - Общение без блокировок"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
