[package]
name = "liberty-reach-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Liberty Reach Team <dev@libertyreach.internal>"]
description = "Cryptographic core for Liberty Reach Messenger"
license = "MIT"

[dependencies]
# Post-Quantum Cryptography
pqc-kyber = "0.4"
# CRYSTALS-Dilithium (когда будет стабильная версия)
# dilithium = "0.1"

# Classical Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }
x448-dalek = "0.2"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }

# Symmetric Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Key Derivation
hkdf = "0.12"

# Hashing
sha3 = "0.10"
blake3 = "1.5"

# Random
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Zero-knowledge primitives
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# Shamir's Secret Sharing
rusty-secrets = "0.6"
# Или альтернатива
# shamir-secret-sharing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
hex = "0.4"

[[bench]]
name = "crypto_bench"
harness = false

[features]
default = ["std"]
std = []
nightly = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
