[package]
name = "liberty-reach-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Liberty Reach Team <dev@libertyreach.internal>"]
description = "Cryptographic core for Liberty Reach Messenger"
license = "MIT"

[dependencies]
# Classical Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Symmetric Encryption
aes-gcm = "0.10"

# Key Derivation
hkdf = "0.12"

# Hashing
sha3 = "0.10"
blake3 = "1.5"

# Random
rand = "0.8"

# Zeroize
zeroize = { version = "1.7", features = ["derive"] }

# Base64
base64 = "0.21"

# Error handling
thiserror = "1.0"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = true
